# monetdbe-examples

./: .gitignore  CMakeLists.txt  README.md  monetdbe-examples.diff
.github/workflows/: c.yml  default-c.yml  python.yml
C/: CMakeLists.txt  cache.c  concurrent.c  copy_into.c  copy_into_threading.c  decimal_argument.c  getstarted.c  helloworld.c  kickoff.c  kickoff2.c  logs.c  myserver.c  proxy.c  tumble.c
C/imdb/: CMakeLists.txt  imdb.c
C/tpch/: CMakeLists.txt  sf1.c
data/: mg_bench1.sh  mgbench.sh  yellow_tripdata.sh
python/: getstarted.py  helloworld.py  imdb.py  mclient.py  mgbench.py  multiconnections.py  russian.py  taxi.py  tpchsf1.py
src/: CMakeLists.txt  cache.c  helloworld.c  kickoff.c  kickoff2.c  mini.c  tumble.c  tumble.py
src/C/: CMakeLists.txt  cache.c  helloworld.c  kickoff.c  kickoff2.c  logs.c  mini.c  tumble.c
src/C/tpch/: CMakeLists.txt  sf1.c
src/python/: cache.py  helloworld.py  imdb.py  logs.py  mgbench.py  mini.py  movies.py  multiconnections.py  people.py  pythonsqlite3.py  smallimdb.py  taxi.py  tpchsf1.py
